# medilink

./: .env  .sqlfluff  Dockerfile  README.md  docker-compose.yml  entrypoint.py  pyproject.toml
appointments/: urls.py  views.py
appointments/services/: appointment_service.py
authentication/: decorators.py  middleware.py  urls.py  views.py
authentication/services/: Login.py  Registretion.py  jwt_tokens.py  refresh_service.py
config/: settings.py  urls.py  wsgi.py
core/: urls.py  views.py
db/init/: 000_db_roles.sql  001_extensions.sql  002_schema.sql  003_enum.sql  004_user.sql  005_roles.sql  006__user_roles.sql  007_functions.sql  007_permissions.sql  008_session.sql  009_session_tokens.sql  010_index.sql  011_permissions.sql  012_appointment.sql  013_appointments.sql  920_rls.sql
postgrest/: postgrest.conf
